Actualización de vistas + nuevo atributo Especialidad en clase Bombero
*Incorporación de validaciones en las vistas
*Se agrega campo "Especialidad" en la clase Bombero
*Se añaden los Combo Box de "Especialidad" en ambas vistas.
*Actualización de las clases y métodos que involucran al campo "Especialidad"

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,6 @@
 compile.on.save=true
-file.reference.jcalendar-1.2.2.jar=C:\\Users\\Guido\\Desktop\\Java Calendario\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar=C:\\Users\\Guido\\Desktop\\Java Calendario\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
-file.reference.mariadb-java-client-3.2.0.jar=C:\\Users\\Guido\\Desktop\\Java drivers\\mariadb-java-client-3.2.0.jar
+file.reference.jcalendar-1.2.2.jar=C:\\Users\\fdicocco\\Desktop\\Programaci\u00f3n\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\fdicocco\\Desktop\\Programaci\u00f3n\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\fdicocco\\Desktop\\Programaci\u00f3n\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.mariadb-java-client-3.2.0.jar=C:\\Users\\fdicocco\\Desktop\\Programaci\u00f3n\\mariadb-java-client-3.2.0.jar
 user.properties.file=C:\\Users\\fdicocco\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
