--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ file.reference.jcalendar-1.2.2.jar=C:\\Users\\fdicocco\\Desktop\\Programaci\u00f
 file.reference.jcalendar-1.4.jar=C:\\Users\\fdicocco\\Desktop\\Programaci\u00f3n\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\fdicocco\\Desktop\\Programaci\u00f3n\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.2.0.jar=C:\\Users\\fdicocco\\Desktop\\Programaci\u00f3n\\mariadb-java-client-3.2.0.jar
-user.properties.file=C:\\Users\\fdicocco\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Guido\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
