--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ file.reference.jcalendar-1.4.jar-1=C:\\Users\\Guido\\Desktop\\Java Calendario\\j
 file.reference.jcalendar-1.4.jar-2=C:\\Users\\fdicocco\\Desktop\\Programaci\u00f3n\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.2.0.jar=C:\\Users\\fdicocco\\Desktop\\Programaci\u00f3n\\mariadb-java-client-3.2.0.jar
 file.reference.mariadb-java-client-3.2.0.jar-1=C:\\Users\\fdicocco\\Desktop\\Programaci\u00f3n\\mariadb-java-client-3.2.0.jar
+file.reference.mariadb-java-client-3.2.0.jar-2=C:\\Users\\Guido\\Desktop\\Java drivers\\mariadb-java-client-3.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -41,7 +42,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.2.2.jar}:\
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.jcalendar-1.4.jar-2}:\
-    ${file.reference.mariadb-java-client-3.2.0.jar-1}
+    ${file.reference.mariadb-java-client-3.2.0.jar-1}:\
+    ${file.reference.mariadb-java-client-3.2.0.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
