--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,21 +27,18 @@ dist.dir=dist
 dist.jar=${dist.dir}/Ignis6.6.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.jcalendar-1.2.2.jar=C:\\Users\\vcaceres_yaguar\\Downloads\\Argentina_programa_2023\\Swing-Java-Netbeans\\Guia 4\\jar_files\\jcalendar-1.2.2.jar
+file.reference.Desplazable.jar=librerias\\Desplazable.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\fdicocco\\Desktop\\Programaci\u00f3n\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-1=C:\\Users\\Guido\\Desktop\\Java Calendario\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-2=C:\\Users\\fdicocco\\Desktop\\Programaci\u00f3n\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.2.0.jar=C:\\Users\\fdicocco\\Desktop\\Programaci\u00f3n\\mariadb-java-client-3.2.0.jar
-file.reference.mariadb-java-client-3.2.0.jar-1=C:\\Users\\fdicocco\\Desktop\\Programaci\u00f3n\\mariadb-java-client-3.2.0.jar
+file.reference.RSScaleLabel.jar=librerias\\RSScaleLabel.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mariadb-java-client-3.2.0.jar}:\
-    ${file.reference.jcalendar-1.2.2.jar}:\
-    ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.jcalendar-1.4.jar-2}:\
-    ${file.reference.mariadb-java-client-3.2.0.jar-1}
+    ${file.reference.Desplazable.jar}:\
+    ${file.reference.RSScaleLabel.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
