--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.Desplazable.jar=librerias\\Desplazable.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\fdicocco\\Desktop\\Programaci\u00f3n\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-2=C:\\Users\\Guido\\Desktop\\Java Calendario\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.2.0.jar=C:\\Users\\fdicocco\\Desktop\\Programaci\u00f3n\\mariadb-java-client-3.2.0.jar
 file.reference.RSScaleLabel.jar=librerias\\RSScaleLabel.jar
 includes=**
@@ -38,7 +39,8 @@ javac.classpath=\
     ${file.reference.mariadb-java-client-3.2.0.jar}:\
     ${file.reference.Desplazable.jar}:\
     ${file.reference.RSScaleLabel.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jcalendar-1.4.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
